--- a/SolvingTheRiddle.2/nazotoki.css
+++ b/SolvingTheRiddle.2/nazotoki.css
@@ -1,4 +1,7 @@
-@media(max-width:840px) {
+@media(max-width:840px)
+
+/*タブレット*/
+    {
     body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -119,7 +122,10 @@
     }
 }
 
-@media(min-width:841px) {
+@media(min-width:841px)
+
+/*パソコン*/
+    {
     body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -240,7 +246,10 @@
     }
 }
 
-@media(max-width:374px) {
+@media(max-width:374px)
+
+/*スマホ*/
+    {
     body {
         font-family: Arial, sans-serif;
         margin: 0;
